230620 - login, nutri_search - 스타일 수정

--- a/ml/example.ipynb
+++ b/ml/example.ipynb
@@ -100,6 +100,18 @@
     "        print(document)\n",
     "        print('='*50, end='\\n\\n')\n",
     "        \n",
+    "    #텍스트 정제 (형태소 분석)\n",
+    "    for i, document in enumerate(documents):\n",
+    "        okt = konlpy.tag.Okt()\n",
+    "        clean_words = []\n",
+    "        for word in okt.pos(document, stem=True): #어간 추출\n",
+    "            if word[1] in ['Noun', 'Verb', 'Adjective']: #명사, 동사, 형용사\n",
+    "                clean_words.append(word[0])\n",
+    "        document = ' '.join(clean_words)\n",
+    "        documents[i] = document\n",
+    "        print('='*50)\n",
+    "        print(document)\n",
+    "        print('='*50, end='\\n\\n')\n",
     "    #텍스트 정제 (불용어 제거)\n",
     "    df = pd.read_csv('https://raw.githubusercontent.com/cranberryai/todak_todak_python/master/machine_learning_text/clean_korean_documents/korean_stopwords.txt', header=None)\n",
     "    df[0] = df[0].apply(lambda x: x.strip())\n",
